--- a/index.html
+++ b/index.html
@@ -5,10 +5,47 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>lecture 9</title>
+        <script
+            src="https://kit.fontawesome.com/077d12e354.js"
+            crossorigin="anonymous"
+        ></script>
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>Hello World</h1>
+        <header>
+            <div class="container myheader">
+                <div class="logo">LOGO</div>
+                <nav>
+                    <ul>
+                        <li>მთავარი</li>
+                        <li>სიახლეები</li>
+                        <li>ჩვენს შესახებ</li>
+                        <li>კონტაქტი</li>
+                    </ul>
+                </nav>
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </header>
+        <section>
+            <div class="container s-2">
+                <img
+                    src="https://townsquare.media/site/295/files/2018/03/DarkSide.jpg"
+                    alt="randon photo"
+                />
+                <img
+                    src="https://townsquare.media/site/295/files/2018/03/DarkSide.jpg"
+                    alt="randon photo"
+                />
+                <img
+                    src="https://townsquare.media/site/295/files/2018/03/DarkSide.jpg"
+                    alt="randon photo"
+                />
+                <img
+                    src="https://townsquare.media/site/295/files/2018/03/DarkSide.jpg"
+                    alt="randon photo"
+                />
+            </div>
+        </section>
     </body>
 </html>
